# coreml-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: model.rs
src/: lib.rs  mlarray.rs  mlbatchmodel.rs  mlmodel.rs  swift.rs
swift-library/: .gitignore  Package.swift
swift-library/Sources/swift-library/: swift_library.swift
tests/: load.rs
