[package]
name = "coreml-rs"
version = "0.1.0"
edition = "2021"
description = "CoreML bindings for Rust using swift-bridge to maximize performance"
license-file = "LICENSE"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytemuck = "1.21.0"
half = { version = "2.4.1", features = ["alloc", "serde", "zerocopy"] }
ndarray = { version = "0.16.1", features = ["serde", "blas"] }
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
