[package]
name = "coreml-rs"
version = "0.5.4"
edition = "2021"
description = "CoreML bindings for Rust using swift-bridge to maximize performance"
license-file = "LICENSE"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytemuck = "1.21.0"
flate2 = "1.1.0"
half = { version = "2.4.1", features = ["alloc", "serde", "zerocopy"] }
ndarray = { version = "0.15.6", features = ["serde", "blas"] }
num = "0.4.3"
swift-bridge = "0.1"
tempdir = "0.3.7"
thiserror = "2.0.12"

[build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
libproc = "0.14.4"
sha2 = "0.10.9"
zip = "2.6.1"
